--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
             bottom: 0;
             width: 100%;
         }
+        .warning {
+            color: red;
+        }
     </style>
 </head>
 <body>
@@ -93,7 +96,10 @@
             <input type="text" id="customerName" name="customerName" required><br><br>
             <label for="amount">Amount:</label>
             <input type="number" id="amount" name="amount" required><br><br>
+            <label for="leftAmount">Left Amount:</label>
+            <input type="number" id="leftAmount" name="leftAmount" required><br><br>
             <button type="submit">Generate Email</button>
+            <p id="warning" class="warning" style="display:none;">Please fill all details</p>
         </form>
 
         <div id="emailResult">
@@ -110,11 +116,19 @@
             event.preventDefault();
             var customerName = document.getElementById("customerName").value;
             var amount = document.getElementById("amount").value;
+            var leftAmount = document.getElementById("leftAmount").value;
             var currentDate = new Date().toLocaleDateString();
+
+            if (customerName === '' || amount === '' || leftAmount === '') {
+                document.getElementById("warning").style.display = "block";
+                return;
+            } else {
+                document.getElementById("warning").style.display = "none";
+            }
 
             var emailContent = `Deduction Notification: ₹${amount} from ${customerName} NDB Account\n\n`;
             emailContent += `Dear ${customerName},\n\n`;
-            emailContent += `We would like to inform you that a deduction of ₹${amount} has been made from your NDB Account on ${currentDate}. Your remaining balance is ₹{left amount}. If you have any queries or require further clarification regarding this deduction, please feel free to contact our customer support team.\n\n`;
+            emailContent += `We would like to inform you that a deduction of ₹${amount} has been made from your NDB Account on ${currentDate}. Your remaining balance is ₹${leftAmount}. If you have any queries or require further clarification regarding this deduction, please feel free to contact our customer support team.\n\n`;
             emailContent += `Thank you for banking with us.\n\n`;
             emailContent += `Sincerely,\n\n`;
             emailContent += `NILAM DIRECT BANK TEAM`;
